; ModuleID = '/home/carl/AnghaBench/openssl/crypto/bio/extr_bf_null.c_nullf_ctrl.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/bio/extr_bf_null.c_nullf_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_5__*, i32, i64, i8*)* @nullf_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @nullf_ctrl(%struct.TYPE_5__* %0, i32 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %4
  store i64 0, i64* %5, align 8
  br label %41

16:                                               ; preds = %4
  %17 = load i32, i32* %7, align 4
  switch i32 %17, label %31 [
    i32 128, label %18
    i32 129, label %30
  ]

18:                                               ; preds = %16
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %20 = call i32 @BIO_clear_retry_flags(%struct.TYPE_5__* %19)
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = load i32, i32* %7, align 4
  %25 = load i64, i64* %8, align 8
  %26 = load i8*, i8** %9, align 8
  %27 = call i64 @BIO_ctrl(i32* %23, i32 %24, i64 %25, i8* %26)
  store i64 %27, i64* %10, align 8
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %29 = call i32 @BIO_copy_next_retry(%struct.TYPE_5__* %28)
  br label %39

30:                                               ; preds = %16
  store i64 0, i64* %10, align 8
  br label %39

31:                                               ; preds = %16
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  %34 = load i32*, i32** %33, align 8
  %35 = load i32, i32* %7, align 4
  %36 = load i64, i64* %8, align 8
  %37 = load i8*, i8** %9, align 8
  %38 = call i64 @BIO_ctrl(i32* %34, i32 %35, i64 %36, i8* %37)
  store i64 %38, i64* %10, align 8
  br label %39

39:                                               ; preds = %31, %30, %18
  %40 = load i64, i64* %10, align 8
  store i64 %40, i64* %5, align 8
  br label %41

41:                                               ; preds = %39, %15
  %42 = load i64, i64* %5, align 8
  ret i64 %42
}

declare dso_local i32 @BIO_clear_retry_flags(%struct.TYPE_5__*) #1

declare dso_local i64 @BIO_ctrl(i32*, i32, i64, i8*) #1

declare dso_local i32 @BIO_copy_next_retry(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
